--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2C3FA5</color>
     <color name="green">#8BC34A</color>
+    <color name="purple">#673AB7</color>
 </resources>
